<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Log My Trip</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_log">Log journey</string>
    <string name="action_delete">Delete selected journeys</string>
    <string name="action_delete_segment">Delete segment</string>
    <string name="action_journey_detail">Journey details</string>
    <string name="action_import_db">Import database</string>
    <string name="action_export_db">Export database</string>
    <string name="action_stop_log">Stop journey logging</string>
    <string name="action_stop_bluetooth">Stop auto log</string>
    <string name="action_start_log">Start journey logging</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_map_type">Map type</string>
    <string name="action_edit">Edit</string>
    <string name="action_export">Export selected journeys</string>
    <string name="action_google_drive_connection">Connecting to google drive</string>


    <!-- Activity subtitles -->
    <string name="main_activity_subtitle">Loged journeys (%1$d)</string>

    <!-- Main activity -->
    <string name="tbLogJourneysText">Log journey</string>
    <string name="tvLogJourneyDescText">Start/Stop logging the current journey</string>
    <string name="tvLogedJourneysDescText">Loged journeys</string>

    <!-- General values -->
    <string-array name="map_types">
        <item>None</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

    <!-- Preferences -->
    <string name="pref_autoStartLogCategoryTitle">Auto log</string>
    <string name="pref_autoStartLogAlwaysTitle">Auto log journey always</string>
    <string name="pref_autoStartLogAlwaysSummary">Start journey logging when power on device</string>
    <string name="pref_autoStartLogTitle">Auto log journey</string>
    <string name="pref_autoStartLogSummary">Start journey logging when connect or disconnect to a bluetooth device</string>
    <string name="pref_autoStartLogModeTitle">Auto log mode</string>
    <string name="pref_autoStartLogModeSummary">Auto start on connect or disconnect</string>

    <string name="pref_gpsCategoryTitle">GPS</string>
    <string name="pref_gpsTimeIntervalTitle">Time interval</string>
    <string name="pref_gpsTimeIntervalSummary">GPS signal time interval</string>
    <string name="pref_gpsDistanceIntervalTitle">Distance interval</string>
    <string name="pref_gpsDistanceIntervalSummary">Minimum displacement between locations</string>
    <string name="pref_gpsAccuracyTitle">Accuracy</string>
    <string name="pref_gpsAccuracySummary">Ignore the gps position if the accuracy is lower than the selected value</string>

    <string-array name="empty_array"/>

    <string-array name="pref_autoStartLogModeEntries">
        <item>On connect device</item>
        <item>On disconnect device</item>
    </string-array>

    <string-array name="pref_autoStartLogModeValues">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_gpsTimeIntervalEntries">
        <item>Minimum</item>
        <item>2 s</item>
        <item>3 s</item>
        <item>4 s</item>
        <item>5 s</item>
        <item>10 s</item>
        <item>20 s</item>
        <item>30 s</item>
        <item>1 m</item>
        <item>2 m</item>
        <item>5 m</item>
        <item>10 m</item>
        <item>15 m</item>
        <item>30 m</item>
    </string-array>

    <string-array name="pref_gpsTimeIntervalValues">
        <item>0</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1800</item>
    </string-array>

    <string-array name="pref_gpsDistanceIntervalEntries">
        <item>1 m</item>
        <item>2 m</item>
        <item>5 m</item>
        <item>10 m (recomended)</item>
        <item>20 m</item>
        <item>50 m</item>
        <item>100 m</item>
    </string-array>

    <string-array name="pref_gpsDistanceIntervalValues">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string-array name="pref_gpsAccuracyEntries">
        <item>10 m (Excellent GPS signal)</item>
        <item>20 m</item>
        <item>30 m</item>
        <item>50 m (recommended)</item>
        <item>100 m</item>
        <item>200 m</item>
        <item>500 m</item>
        <item>1000 m</item>
        <item>2000 m (Low GPS signal)</item>
    </string-array>

    <string-array name="pref_gpsAccuracyValues">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>

    <string name="pref_bluetoothDeviceTitle">Bluetooth devices</string>
    <string name="pref_bluetoothDeviceSummary">Select bluetooth devices to start journey logging when connect</string>
    <string name="pref_bluetoothDeviceListTitle">Bluetooth paired devices</string>
    <string name="pref_bluetoothNotFound">Bluetooth adapter not found</string>

    <!-- Notification -->
    <string name="notif_ChannelID">Log my trip</string>
    <string name="notif_Channel_Name">Log my trip</string>
    <string name="notif_Channel_Description">Log my trip notifications</string>

    <string name="notif_Title">Log my trip</string>
    <string name="notif_Tricker">Starting Log my trip service</string>
    <string name="notif_ContentWaitingBluetooth">Waiting bluetooth %1$s to %2$s log</string>
    <string name="notif_ContentWaitingBluetooth_mode_connect">connection</string>
    <string name="notif_ContentWaitingBluetooth_mode_disconnect">disconnection</string>
    <string name="notif_ContentWaitingBluetooth_action_start">start</string>
    <string name="notif_ContentWaitingBluetooth_action_stop">stop</string>
    <string name="notif_ContentLogging">Logging journey</string>
    <string name="notif_configured_devices">Bluetooth devices</string>

    <string name="notif_logging_title">Logging trip</string>
    <string name="notif_logging_content">Start time: %1$s</string>

    <!-- Messages -->
    <string name="msg_GooglePlayServicesUnavailable">Google Play Services unavailable, can not continue</string>
    <string name="msg_database_exporting">Exporting database</string>
    <string name="msg_database_exported">Database exported</string>
    <string name="msg_database_importing">Importing database</string>
    <string name="msg_database_imported">Database imported</string>
    <string name="msg_exporting_journeys">Exporting journeys</string>
    <string name="msg_loading_journeys">Loading journeys</string>
    <string name="msg_delete_confirm">Delete selected items?</string>
    <string name="msg_edit_journey">Journey properties</string>
    <string name="msg_gps_disabled">GPS is disabled</string>
    <string name="msg_configure_gps">Configure</string>

    <!-- Errors -->
    <string name="error_cant_read_file">Can\'t read file</string>
    <string name="error_cant_write_file">Can\'t write file</string>

    <!-- Titles -->
    <string name="title_delete">Delete</string>
    <string name="title_selected_count">%1$d selected</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_description">Description</string>
    <string name="title_start">Start</string>
    <string name="title_end">End</string>
    <string name="title_start_date">Start date</string>
    <string name="title_start_time">Start time</string>
    <string name="title_end_date">End date</string>
    <string name="title_end_time">End time</string>
    <string name="title_total_distance">Total distance</string>
    <string name="title_total_time">Total time</string>
    <string name="title_location_from">From</string>
    <string name="title_location_to">To</string>
    <string name="title_max_speed">Max speed</string>
    <string name="title_medium_speed">Medium speed</string>
    <string name="title_summary">Summary</string>
    <string name="title_segment_num">Segment %d</string>
    <string name="title_map">Map</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_map_type">Select map type</string>
    <string name="title_title">Title</string>
    <string name="title_edit_journey">Edit journey</string>
    <string name="title_export">Export journeys</string>
    <string name="title_export_format">Export format</string>
    <string name="title_export_location">Export location</string>

    <!-- Generic text -->
    <string name="text_gpx" translatable="false">GPX</string>
    <string name="text_kml" translatable="false">KML</string>
    <string name="text_local_file">Local file</string>
    <string name="text_google_drive">Google Drive</string>
    <string name="title_export_to_google_drive">Exporting to google drive</string>
    <string name="msg_error_exporting">Error exporting file</string>
    <string name="msg_error_gd_creating_new_file">Error creating new file</string>
    <string name="msg_error_gd_creating_new_folder">Error creating google drive folder</string>
    <string name="msg_error_gd_deleting_file">Error deleting google drive file</string>
    <string name="text_file_exported">%s exported successfully</string>
    <string name="text_start">Start</string>
    <string name="text_end">End</string>
    <string name="text_export_successful">Exported successful</string>
    <string name="pref_autosyncGoogleDriveCategoryTitle">Auto sync</string>
    <string name="pref_autoSyncGoogleDriveSummary">Auto sync journeys with Google Drive</string>
    <string name="pref_autoSyncGoogleDriveTitle">Auto sync with Google Drive</string>
    <string name="pref_autoSyncGoogleDriveAccountTitle">Google drive account</string>
    <string name="pref_autoSyncGoogleDriveAccountSummary">Sync journeys with account: %1$s</string>
    <string name="msg_error_gd_reading_folder">Can\'t read folder</string>
    <string name="msg_folder_not_found">Folder not found (%1$s)</string>
    <string name="msg_file_not_found">File not found (%1$s)</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="action_journeys">Journeys</string>
    <string name="action_trips">Trips</string>
    <string name="text_no_user">No user</string>
    <string name="text_no_email">No email</string>

    <string name="msg_not_enough_permissions">Not enough permissions</string>

</resources>