<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_autoStartLogCategoryTitle">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_autoStartLogAlways"
            android:summary="@string/pref_autoStartLogAlwaysSummary"
            android:title="@string/pref_autoStartLogAlwaysTitle"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_autoStartLogBluetooth"
            android:summary="@string/pref_autoStartLogSummary"
            android:title="@string/pref_autoStartLogTitle" />

        <ListPreference
            android:dependency="pref_autoStartLogBluetooth"
            android:entries="@array/pref_autoStartLogModeEntries"
            android:entryValues="@array/pref_autoStartLogModeValues"
            android:key="pref_autoStartLogMode"
            android:summary="@string/pref_autoStartLogModeSummary"
            android:title="@string/pref_autoStartLogModeTitle" />

        <com.cachirulop.logmytrip.preferences.BluetoothDevicePreference
            android:defaultValue="@array/empty_array"
            android:dependency="pref_autoStartLogBluetooth"
            android:dialogTitle="@string/pref_bluetoothDeviceListTitle"
            android:key="pref_bluetoothDeviceList"
            android:summary="@string/pref_bluetoothDeviceSummary"
            android:title="@string/pref_bluetoothDeviceTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_autosyncGoogleDriveCategoryTitle">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_autoSyncGoogleDrive"
            android:summary="@string/pref_autoSyncGoogleDriveSummary"
            android:title="@string/pref_autoSyncGoogleDriveTitle"/>

        <com.cachirulop.logmytrip.preferences.GoogleAccountSelector
            android:defaultValue="@array/empty_array"
            android:dependency="pref_autoSyncGoogleDrive"
            android:dialogTitle="@string/pref_autoSyncGoogleDriveAccountTitle"
            android:key="pref_autoSyncGoogleDriveAccount"
            android:summary="@string/pref_autoSyncGoogleDriveAccountSummary"
            android:title="@string/pref_autoSyncGoogleDriveAccountTitle"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_gpsCategoryTitle">
        <ListPreference
            android:entries="@array/pref_gpsTimeIntervalEntries"
            android:entryValues="@array/pref_gpsTimeIntervalValues"
            android:key="pref_gpsTimeInterval"
            android:summary="@string/pref_gpsTimeIntervalSummary"
            android:title="@string/pref_gpsTimeIntervalTitle" />
        <ListPreference
            android:entries="@array/pref_gpsDistanceIntervalEntries"
            android:entryValues="@array/pref_gpsDistanceIntervalValues"
            android:key="pref_gpsDistanceInterval"
            android:summary="@string/pref_gpsDistanceIntervalSummary"
            android:title="@string/pref_gpsDistanceIntervalTitle" />
        <ListPreference
            android:entries="@array/pref_gpsAccuracyEntries"
            android:entryValues="@array/pref_gpsAccuracyValues"
            android:key="pref_gpsAccuracy"
            android:summary="@string/pref_gpsAccuracySummary"
            android:title="@string/pref_gpsAccuracyTitle" />
    </PreferenceCategory>


</PreferenceScreen>