<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cachirulop.logmytrip.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_auto_start_log"
        android:checkable="true"
        android:title="@string/pref_autoStartLogTitle"/>

    <item
        android:id="@+id/action_import_db"
        android:orderInCategory="102"
        android:title="@string/action_import_db"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_export_db"
        android:orderInCategory="103"
        android:title="@string/action_export_db"
        app:showAsAction="never"/>

</menu>
