<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_export_format"
        android:textColor="@color/default_background_dark"
        android:id="@+id/textView"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gpx"
            android:id="@+id/rbExportGPX"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kml"
            android:id="@+id/rbExportKML"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        style="@style/SeparatorViewStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/default_background_dark"
        android:text="@string/title_export_location"
        android:id="@+id/textView3"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_local_file"
            android:id="@+id/rbExportLocalFile"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_google_drive"
            android:id="@+id/rbExportGoogleDrive"/>
    </RadioGroup>

</LinearLayout>