<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.JourneyDetailActivity">

    <item
        android:id="@+id/action_start_stop_log"
        android:icon="@android:drawable/ic_media_pause"
        android:orderInCategory="201"
        android:title="@string/action_stop_log"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_map_type"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="202"
        android:title="@string/action_map_type"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="203"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>

</menu>